# imagine

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: release.yml
api/: Cargo.toml
api/src/: lib.rs  router.rs
api/src/handlers/: file.rs  image.rs  mod.rs
entity/: Cargo.toml
entity/src/: file.rs  image.rs  image_variant.rs  lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230813_121555_create_image_table.rs  m20230813_233040_create_image_variant_table.rs
service/: Cargo.toml
service/src/: image.rs  lib.rs  mutation.rs  query.rs  storage.rs
src/: main.rs  router.rs
src/handlers/: file.rs
