[package]
name = "imagine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "imagine"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "api", "service", "entity", "migration"]

[dependencies]
imagine-api = { path = "api" }