[package]
name = "imagine-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.50", features = ["affix"] }
regex = "1.9"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
entity = { path = "../entity" }
migration = { path = "../migration" }
service = { path = "../service" }
