[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[lib]
name = "entity"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
salvo = { version = "0.50" }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }

[dependencies.sea-orm]
version = "0.12"
