[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "service"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.50", features = ["affix"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
entity = { path = "../entity" }
image = { version = "0.24.7", features = ["webp-encoder"] }

[dependencies.sea-orm]
version = "0.12"
features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
